# ChangeLog for dev-java/jcodings
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jcodings/ChangeLog,v 1.15 2014/06/17 10:56:33 mrueg Exp $

  17 Jun 2014; Manuel Rüger <mrueg@gentoo.org> -jcodings-1.0.2.ebuild:
  NM: Cleanup superseeded ebuilds.

*jcodings-1.0.11 (03 May 2014)

  03 May 2014; Tom Wijsman <TomWij@gentoo.org> +jcodings-1.0.11.ebuild:
  Version bump to 1.0.11.

  09 May 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> jcodings-1.0.5.ebuild:
  x86 stable wrt bug #396305

  30 Apr 2012; Agostino Sarubbo <ago@gentoo.org> jcodings-1.0.5.ebuild:
  Stable for amd64, wrt bug #396305

*jcodings-1.0.5 (24 Jan 2012)

  24 Jan 2012; Ralph Sennhauser <sera@gentoo.org> +jcodings-1.0.5.ebuild,
  +files/maven-build.xml:
  Version bump, add javadocs.

  28 May 2010; Joseph Jezak <josejx@gentoo.org> jcodings-1.0.4.ebuild:
  Marked ppc.

  15 May 2010; Markus Meier <maekke@gentoo.org> jcodings-1.0.4.ebuild:
  amd64 stable, bug #317435

  30 Apr 2010; Vlastimil Babka <caster@gentoo.org> jcodings-1.0.4.ebuild:
  Change SRC_URI to gentoo mirrors, since upstream is changing tarball.
  Fixes bug #317837.

  28 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  jcodings-1.0.4.ebuild:
  x86 stable wrt security bug #317435 (also see bug #312547)

*jcodings-1.0.4 (27 Apr 2010)

  27 Apr 2010; Vlastimil Babka <caster@gentoo.org> +jcodings-1.0.4.ebuild:
  Version bump, security bug #312547.

  03 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  jcodings-1.0.2.ebuild:
  Transfer Prefix keywords

  25 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> jcodings-1.0.2.ebuild:
  Keywording for ppc, bug 270910

  05 Jul 2009; Markus Meier <maekke@gentoo.org> jcodings-1.0.2.ebuild:
  amd64 stable, bug #276026

  01 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  jcodings-1.0.2.ebuild:
  stable x86, bug 276026

*jcodings-1.0.2 (22 May 2009)

  22 May 2009; Vlastimil Babka <caster@gentoo.org> +jcodings-1.0.2.ebuild,